--- a/class-presentation-final/Makefile
+++ b/class-presentation-final/Makefile
@@ -1,15 +1,17 @@
 BITCODEFILES=test.bc challenge.bc
 READABLEFILES=test.ll challenge.ll
 
-LLVM_LINK=llvm-link
+LLVM_LINK=./llvm-link
 REAL_LLI=../llvm-3.6.0/build/bin/lli
 
 default: $(BITCODEFILES)
+	$(LLVM_LINK) $(BITCODEFILES) -o a.bc
 
 readable: $(READABLEFILES)
+	$(LLVM_LINK) -S $(BITCODEFILES) -o a.ll
 
 clean:
-	rm -rf $(BITCODEFILES) $(READABLEFILES)
+	rm -rf $(BITCODEFILES) $(READABLEFILES) a.bc a.ll
 
 %.bc: %.cpp
 	clang++ -emit-llvm $*.cpp -o $@
@@ -23,6 +25,5 @@ clean:
 %.ll: %.c
 	clang -S -emit-llvm -c $*.c -o $@
 
-test: $(BITCODEFILES)
-	$(LLVM_LINK) 
-	$(REAL_LLI) test.bc
+test: $(BITCODEFILES) default
+	$(REAL_LLI) -force-interpreter a.bc
